src/containers/VideoBGAndForm/VideoBGAndForm.css
.header{
    display: flex;
    flex-direction: row;
    width: 100%;
    height: 640px;
    margin: 1vw;
    align-items: center;
    background: linear-gradient(0deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../../assets/Video-BG-w-Overlay.png");
    
}

.header-content {
    flex: 1;
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items: flex-start;
    height: max-content;
    padding-left: 120px;
    padding-right: 180px;
}

.header-content h1 {
    color: var(--color-bg);
    font-family: var(--font-family); 
    font-style: normal;
    font-weight: 700;
    font-size: 36px;
    line-height: 44px;
}

.header-content_input button {
    margin-top: 2rem;
    /* margin-left: 7.5rem; */
    background: var(--color-umbcTheme);
    border-radius: 4px;

    padding: 0.4rem 2.7rem 0.4rem 2.7rem;
    font-family: var(--font-family);
    font-style: normal;
    font-weight: 700;
    font-size: 20px;
    line-height: 24px;
    letter-spacing: 0.1em;
    color: var(--color-utility);

    cursor: pointer;
    outline: none;
}

.header-queryBox {
    flex: 1;
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items: flex-start;
    width: 400px;
    height: max-content;
    margin-right: 120px;
    padding-top: 10px;
    padding-bottom: 10px;
    background: var(--color-umbcTheme);
    border-radius: 4px;
}


.header-queryBox_form p {

    width: 350px;
    height: 17px;
    /* left: 945px;
    top: 344px; */

    color: var(--color-utility);
    font-family: var(--font-family);
    font-style: normal;
    font-weight: 600;
    font-size: 14px;
    line-height: 17px;
}

.header-queryBox_field input {
    font-size: 14px;
}


.header-queryBox_radiobutton label {

    padding-left: 7px;
    font-family: var(--font-family);
    font-style: normal;
    font-weight: 600;
    font-size: 12px;
    line-height: 15px;
    white-space: nowrap;
    text-align: left;
    color: var(--color-utility);
}

.header-queryBox_radiobutton input {
    box-sizing: border-box;

    width: 10px;
    height: 10px;
    background: #FFFFFF;
    border: 1px solid #000000;
}

.header-queryBox_field {
    flex: 1;
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items: flex-start;
}
.header-queryBox_field input{
    width: 100%;
    height: 35px;
}

.header-queryBox_submit input {
    width: 160px;
    height: 37px;
    background: var(--color-utility);
    border-radius: 4px; 
    font-family: var(--font-family);
    font-style: normal;
    font-weight: 700;
    font-size: 20px;
    line-height: 24px;
    letter-spacing: 0.1em;
    text-transform: uppercase;
    color: var(--color-umbcTheme);    
}

@media (max-width: 800px) {
    .header {
        /* flex-direction: column; */
        height: 400px;
    }
    .header-queryBox {
        margin-right: 10px;
    }
    .header-content {
        padding-left: 10px;
        padding-right: 10px;
    }
    
}

